<resources>
    <string name="app_name">Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="noteTitle">Font Title</string>
    <string name="noteSubtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="choose_color">Choose Color</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_url">Add URL</string>
    <string name="app_name2">Notes</string>
    <string name="app_tag_line">Capture, Organize, and Never Miss a Thought with Our Note App</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="note_delete_message">Are you sure want\'s to delete this Note?</string>
    <string name="version">Version</string>
</resources>