<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".activities.AddNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:src="@drawable/baseline_keyboard_arrow_left_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcon" />


            <ImageView
                android:id="@+id/imgSave"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:padding="@dimen/_4sdp"
                android:background="@drawable/round_outline"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_done_24"
                app:layout_constraintBottom_toBottomOf="@id/imgBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imgBack"
                app:tint="@color/colorIcon" />


            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/search_background"
                android:fontFamily="@font/google_sans_bold"
                android:hint="@string/noteTitle"
                android:imeOptions="actionDone"
                android:paddingHorizontal="@dimen/_8sdp"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textCapWords"
                android:textColor="@color/white"
                android:textColorHint="@color/textHintColor"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgBack" />


            <TextView
                android:id="@+id/txtDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_regular"
                android:includeFontPadding="false"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="Date"
                android:textColor="@color/colorIcon"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"/>


            <EditText
                android:id="@+id/inputNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/search_background"
                android:fontFamily="@font/google_sans_medium"
                android:hint="@string/noteSubtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textCapWords|textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/textHintColor"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewSubtitleIndicator"
                app:layout_constraintTop_toBottomOf="@id/txtDateTime" />

            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputNoteSubtitle"
                />

            <LinearLayout
                android:id="@+id/layoutWebLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputNoteSubtitle">

                <TextView
                    android:id="@+id/textWebUrl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/google_sans_regular"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_13ssp" />

                <ImageView
                    android:id="@+id/imageRemoveWebURL"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/baseline_delete_24"
                    app:tint="@color/red" />

            </LinearLayout>
            
            <EditText
                android:id="@+id/inputNotes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                android:background="@drawable/search_background"
                android:fontFamily="@font/google_sans_regular"
                android:padding="@dimen/_8sdp"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textCapWords|textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/textHintColor"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutWebLink"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>

   <include layout="@layout/layout_color_dialog"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>